# honest-backtest

./: .env.example  .gitignore  PORTFOLIO.fr.md  PORTFOLIO.md  README.md  conftest.py  pyproject.toml  requirements.txt  validate.py
assets/: generate_assets.py
core/: __init__.py  prop_rules.py
data/: fetch.py
diagnostics/: edge_scan.py  mr_session.py  oos_validate.py  prop_mc.py  spread_mr.py
docs/: METHODOLOGY.md
honestbacktest/: __init__.py  validate.py
honestbacktest/core/: instruments.py
honestbacktest/data/: __init__.py  fetch.py
honestbacktest/diagnostics/: __init__.py  edge_scan.py  mr_session.py  oos_validate.py  prop_mc.py  spread_mr.py
tests/: test_prop_rules.py
