[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "honestbacktest"
version = "0.1.0"
description = "CME micro futures prop edge harness: prove a tradeable edge out-of-sample or kill it before building trading infrastructure."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Makeph" }]
keywords = ["backtesting", "futures", "prop-firm", "monte-carlo", "out-of-sample", "trading", "risk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "yfinance>=0.2",
]

[project.optional-dependencies]
databento = ["databento"]
ibkr = ["ib_async"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Makeph/honest-backtest"

[project.scripts]
honest-backtest = "honestbacktest.validate:main"

[tool.setuptools]
packages = [
  "honestbacktest",
  "honestbacktest.core",
  "honestbacktest.diagnostics",
  "honestbacktest.data",
]
